[package]
name = "hello_gpui"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { version = "0.2.2" }
gpui-component = "0.5.0"
core-text = "=21.0.0"

[package.metadata.bundle]
name = "Hello GPUI"
identifier = "com.jhorman.hellogpui"
version = "1.0.0"
copyright = "Copyright Jhorman 2026"
category = "Productivity"
