[package]
name = "makako"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { version = "0.2.2" }
gpui-component = "0.5.0"
core-text = "=21.0.0"
reqwest = { version = "0.12", features = ["blocking"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[package.metadata.bundle]
name = "Makako"
identifier = "com.jh0rman.makako"
version = "1.0.0"
category = "Productivity"
